# x2caffe

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  build.py  setup.py
pto2caffe/: .gitignore  README.md  base.py  base_Model.py  base_Operator.py  caffe_dump.py  caffe_transform.py  clean.sh  compare.py  compile.py  convert.py  dump.py  preprocess.py  test.py  util.py
pto2caffe/onnx2caffe/: convert.py  model.py  onnx.py  onnx_run.py  preload.py  utility.py
pto2caffe/onnx2caffe/op/: abs.py  activation.py  add.py  batchnorm.py  binary.py  cast.py  clip.py  compare.py  concat.py  constant.py  (+51 more)
pto2caffe/pytorch2caffe/: convert.py  model.py  pnnx.py  pytorch.py
pto2caffe/pytorch2caffe/pnnx/: CMakeLists.txt  mk.sh
pto2caffe/pytorch2caffe/pnnx/src/: CMakeLists.txt  ir.cpp  ir.h  main.cpp  pass_level0.h
pto2caffe/pytorch2caffe/pnnx/src/pass_level0/: shape_inference.cpp
pto2caffe/pytorch2caffe/pnnx/tests/: .test_F_conv2d.py.swp
pto2caffe/tensorflow2caffe/: convert.py  model.py  preload.py  tensorflow.py
pto2caffe/tflite2caffe/: convert.py  model.py  quantize.py  tflite.py  tflite_run.py
pto2caffe/torch2caffe/: convert.py  internal_graph.py  model.py  torchir_passes.py
pto2caffe/tvm2caffe/: convert.py  model.py  relay.py
x2caffe/: README.md  base.py  base_Model.py  base_Operator.py  caffe_path.py  clean.sh  compare.py  pto.py  util.py
x2caffe/onnx2caffe/: convert.py  model.py  utility.py
x2caffe/pytorch2caffe/: model.py  pytorch.py
x2caffe/tflite2caffe/: convert.py
x2caffe/torch2caffe/: convert.py  torchscript.py
x2caffe/tvm2caffe/: relay.py
(+360 files in other folders)
